# gpt1

./: .gitignore  README.md  implementation.md  main.py  pyproject.toml
configs/: finetune.yaml  pretrain.yaml
gpt/: data.py  model.py  tokenizer.py  train.py  utils.py
notebooks/: tokenizer.ipynb
notes/: thought_process_config_system.md
scripts/: prepare_data.py
tests/: test_config.py  test_data.py  test_tokeniser.py  test_wandb.py
