[project]
name = "gpt1"
version = "0.1.0"
description = "GPT 1 paper implementation in Pytorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpt"]
